# xaeroAI

./: .gitignore  Cargo.toml  README.md
models/nano/: codegen_350m_ultra_code_nano_config.json  codegen_350m_ultra_code_nano_manifest.txt  codegen_350m_ultra_code_nano_metadata.json  phi2_ultra_code_nano_config.json  phi2_ultra_code_nano_manifest.txt  phi2_ultra_code_nano_metadata.json  trocr_base_printed_ultra_vision_nano_config.json  trocr_base_printed_ultra_vision_nano_manifest.txt  trocr_base_printed_ultra_vision_nano_metadata.json  trocr_small_handwritten_ultra_vision_nano_config.json  trocr_small_handwritten_ultra_vision_nano_manifest.txt  trocr_small_handwritten_ultra_vision_nano_metadata.json  trocr_small_handwritten_ultra_vision_nano_part_002
models/nano/codegen_350m_ultra_code_nano_tokenizer/: tokenizer_config.json
models/nano/phi2_ultra_code_nano_tokenizer/: tokenizer_config.json
models/nano/trocr_base_printed_ultra_vision_nano_tokenizer/: tokenizer_config.json
scripts/: create_nano_models.py  download_models.py  git_nano_model_splitter.sh  quick_quantize.py
src/: lib.rs
